<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="114dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterAlbumHint"
            android:id="@+id/newAlbumText"
            android:inputType="text"
        />
        <Button
            android:id="@+id/submitAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateAlbum"
            />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/albumsList"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>