<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPage"
    android:orientation="vertical">

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/title"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:hint="@string/searchValue"
        android:id="@+id/value"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
            />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/searchText" />

    <GridView
        android:id="@+id/gridView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchButton"
        android:numColumns="2"
        android:scrollbars="vertical"
        android:layout_marginTop="19dp" />
</RelativeLayout>